--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -3,8 +3,8 @@
           package="com.jds.Traveler"
           android:versionCode="1"
           android:versionName="1.0">
-    <uses-sdk android:minSdkVersion="18"/>
-    <application android:label="@string/app_name" android:icon="@drawable/ic_launcher" android:theme="Holo.Light">
+    <uses-sdk android:minSdkVersion="8"/>
+    <application android:label="@string/app_name" android:icon="@drawable/ic_launcher" android:theme="@style/Theme.AppCompat.Light">
         <activity android:name="MainActivity"
                   android:label="@string/app_name">
             <intent-filter>
